Move static includes (title, versions and so on) into static folder, rename template to mte7101

--- a/doc/inc/static/attachment.tex
+++ b/doc/inc/static/attachment.tex
@@ -1,3 +1,7 @@
+% -*- coding: UTF-8 -*-
+% vim: autoindent expandtab tabstop=4 sw=4 sts=4 filetype=tex
+% chktex-file 27
+
 % In den Anhang fügen Sie ein:
 %  * Details des Projektpans, falls vorhanden
 %  * Resultate und Zwischenresultate in Funktion der Projektiterationen
@@ -23,7 +27,11 @@
     \vfill % equivalent to \vspace{\fill}
     \clearpage
 \end{titlepage}
+
 \newpage
+ \input{inc/static/attachment/10_meeting_minutes}
+
+
 % \includepdfset{pagecommand={\thispagestyle{headings}}}
 % \includepdf[pages=-, addtotoc={1,chapter,0,Anforderungsdokument,chap:anf},scale=0.95]{anhang/anforderungen.pdf}
 % \newpage
