--- a/doc/inc/static/title.tex
+++ b/doc/inc/static/title.tex
@@ -1,3 +1,8 @@
+% -*- coding: UTF-8 -*-
+% vim: autoindent expandtab tabstop=4 sw=4 sts=4 filetype=tex
+% chktex-file 27 - disable warning about missing include files
+% chktex-file 36 - disable put space in front of parentheses warning
+
 % Project documentation template
 % ===========================================================================
 % This is part of the document "Project documentation template".
