--- a/doc/inc/static/glossary.tex
+++ b/doc/inc/static/glossary.tex
@@ -1,3 +1,7 @@
+% -*- coding: UTF-8 -*-
+% vim: autoindent expandtab tabstop=4 sw=4 sts=4 filetype=tex
+% chktex-file 27
+
 \newglossaryentry{OWL}{name={OWL},description={
     Web Ontology Language;
     Ontologiesprache für das semantische Web.
