--- a/doc/inc/static/versions.tex
+++ b/doc/inc/static/versions.tex
@@ -1,3 +1,7 @@
+% -*- coding: UTF-8 -*-
+% vim: autoindent expandtab tabstop=4 sw=4 sts=4 filetype=tex
+% chktex-file 27 - disable warning about missing include files
+
 % Versionenkontrolle :
 % -----------------------------------------------
 
