Add includes and therefore document outline

--- a/doc/inc/10_introduction.tex
+++ b/doc/inc/10_introduction.tex
@@ -1,2 +1,6 @@
+% -*- coding: UTF-8 -*-
+% vim: autoindent expandtab tabstop=4 sw=4 sts=4 filetype=tex
+% chktex-file 27 - disable warning about missing include files
+
 \chapter{Einleitung}
 \label{chap:10_introduction}
