Fix minor parts in introduction chapter

--- a/doc/inc/10_introduction.tex
+++ b/doc/inc/10_introduction.tex
@@ -7,7 +7,7 @@
 
 Seit dem Bestehen moderner Computer existiert auch die Computergrafik. Ziel der Computergrafik ist es unter Anderem den dreidimensionalen Raum auf eine zweidimensionale Fläche abzubilden, da die Ausgabe meist auf den zweidimensionalen Raum limitiert ist.
 
-Dabei wird zwischen statischen Bildern und dynamischen Bildern unterschieden. Statische Bilder werden bei Bedarf dargestellt und ändern sich in der Regel nicht. Dynamische Bilder können sich hingegen ständig ändern und müssen --- bedingt durch das menschliche Auge --- mit 25 Bildern pro Sekunde ausgegeben werden. Es bestand bereits früh das Bestreben möglichst eine realistische Darstellung zu erhalten. Eine Darstellung also, die möglichst nahe an der menschlichen Wahrnehmung liegt.
+Dabei wird zwischen statischen Bildern und dynamischen Bildern unterschieden. Statische Bilder werden bei Bedarf dargestellt und ändern sich in der Regel nicht. Dynamische Bilder können sich hingegen ständig ändern und müssen --- bedingt durch das menschliche Auge --- mit 25 Bildern pro Sekunde ausgegeben werden. Es bestand bereits früh das Bestreben eine möglichst realistische Darstellung zu erhalten. Eine Darstellung also, die möglichst nahe an der menschlichen Wahrnehmung liegt.
 
 Im Laufe der Zeit entstanden verschiedene Ansätze um eine solche Darstellung zu bieten. Ein Teilgebiet davon sind Beleuchtungsmodelle, welche die Beleuchtung einer Darstellung bzw.\ einer Szene berechnen. Dabei wird zwischen lokalen und globalen Beleuchtungsmodellen unterschieden.
 
@@ -15,6 +15,6 @@ Ein globales Beleuchtungsmodell ist Ray Tracing (zu deutsch Strahlenverfolgung),
 
 Mit schnell ist dabei die Zeit gemeint, die benötigt wird um ein einzelnes Bild darzustellen. Möchte man jedoch eine Darstellung in Echtzeit erreichen, so war das Verfahren lange zu langsam.
 
-Im Rahmen der Weiterentwicklung der Computer und vor allem durch die Weiterentwicklung der Grafikkarten (GPUs) ist Ray Tracing jedoch wieder in den Fokus der Darstellung von Szenen in Echtzeit gerückt.
+Im Rahmen der Weiterentwicklung der Computer und vor allem durch die Weiterentwicklung der Grafikkarten (GPUs), ist Ray Tracing jedoch wieder in den Fokus der Darstellung von Szenen in Echtzeit gerückt.
 
-Diese Projektarbeit stellt ein spezielles, auf Ray Tracing basierendes Verfahren zur Darstellung eines Bildes in Echtzeit vor: Das so Volume Ray Casting oder Sphere Tracing genannte Verfahren.
+Diese Projektarbeit stellt ein spezielles Ray Tracing Verfahren zur Darstellung von Bildern in Echtzeit vor: Volume Ray Casting bzw. Sphere Tracing.
