Add content to administrative chapter

--- a/doc/inc/20_administrative.tex
+++ b/doc/inc/20_administrative.tex
@@ -5,11 +5,40 @@
 \chapter{Administratives}
 \label{chap:20_administrative}
 
+Einige administrative Aspekte der Projektarbeit werden angesprochen, obwohl sie für das Verständnis der Resultate nicht notwendig sind.
+
+Im gesamten Dokument wird nur die männliche Form verwendet, womit aber beide Geschlechter gemeint sind.
+
 \section{Beteiligte Personen}
 \label{sec:involved_persons}
+
+\begin{tabbing} %tabulator
+Bezeichnung: \= Name name name name name name\= Zuständigkeit \kill \\
+    Autor           \> Sven Osterwalder\protect\footnotemark[1]{}    \> \\
+    Betreuer        \> Prof.\ Claude Fuhrer\protect\footnotemark[2]{}  \> \textit{Begleitet den Studenten bei der Projektarbeit}\\
+\end{tabbing}
+\footnotetext[1]{sven.osterwalder@students.bfh.ch}
+\footnotetext[2]{claude.fuhrer@bfh.ch}
 
 \section{Aufbau des Dokumentes}
 \label{sec:document_structure}
 
-\section{Ergebnisse}
+Der Aufbau der vorliegenden Arbeit ist wie folgt:
+\begin{itemize}
+    \item Einleitung zur Projektarbeit
+    \item Beschreibung der Aufgabenstellung
+    \item Vorgehen des Autors im Hinblick auf die gestellten Aufgaben
+    \item Lösung der gestellten Aufgaben
+    \item Verwendete Technologien
+\end{itemize}
+
+Der Schwerpunkt dieser Arbeit liegt in der Beschreibung der theoretischen Grundlagen (unter praktischen Aspekten) des Volume Ray Casting Verfahrens.
+
+\section{Ergebnisse (Deliverables)}
 \label{sec:deliverables}
+
+Nachfolgend sind die abzugebenden Objekte aufgeführt:
+\begin{itemize}
+    \item \textbf{Abschlussdokument} \\
+        Das Abschlussdokument beinhaltet die theoretischen Grundlagen (unter praktischen Aspekten) des Volume Ray Casting Verfahrens
+\end{itemize}
