Add TODOs to scope chapter

--- a/doc/inc/30_scope.tex
+++ b/doc/inc/30_scope.tex
@@ -5,20 +5,34 @@
 \chapter{Aufgabenstellung}
 \label{chap:scope}
 
+\todo[inline]{Describe scope}
+
 \section{Motivation}
 \label{sec:motivation}
+
+\todo[inline]{Describe motivation}
 
 \subsection{Demoszene}
 \label{subsec:demoscene}
 
+\todo[inline]{Loose some words about demoscene! }
+
 \section{Ausgangslage}
 \label{sec:initial_situation}
+
+\todo[inline]{Describe initial situation}
 
 \section{Ziele und Abgrenzung}
 \label{sec:objectives}
 
+\todo[inline]{Describe objectives}
+
 \subsection{Vorgängige Arbeiten}
 \label{subsec:preliminaries}
 
+\todo[inline]{Describe preliminaries}
+
 \subsection{Neue Lerninhalte}
 \label{subsec:new_learning_contents}
+
+\todo[inline]{Describe new learning contents}
