--- a/doc/inc/40_procedure.tex
+++ b/doc/inc/40_procedure.tex
@@ -11,14 +11,61 @@
 \subsection{Regelmässige Treffen}
 \label{subsec:meetings}
 
+Regelmässige Besprechungen mit dem Betreuer der Arbeit halfen die gesteckten Ziele zu erreichen und Fehlentwicklungen zu vermeiden. Der Betreuer unterstützte den Autor dabei mit Vorschlägen. Die Treffen fanden mindestens alle zwei Wochen statt, sie wurden in Form eines Protokolles festgehalten.
+
 \section{Projekphasen}
 \label{sec:project_schedule}
 
 \subsection{Meilensteine}
 \label{subsec:milestones}
 
+Um bei der Arbeit ein möglichst strukturiertes Vorgehen einzuhalten, wurden folgende Projektphasen gewählt:
+\begin{itemize}
+    \item Projektstart
+    \item Erarbeitung und Festhalten der Anforderungen
+    \item Erarbeitung der theoretischen Grundlagen
+    \item Erstellung der abschliessenden Dokumentation
+\end{itemize}
+
+Die Phasen der Erarbeitung der theoretischen Grundlagen sowie die Erstellung der abschliessenden Dokumentation liefen parallel ab.
+
 \subsection{Zeitplan / Projektphasen}
 \label{subsec:timeschedule}
+
+\begin{figure}[H]
+    \begin{ganttchart}[
+        vgrid,
+        x unit=0.7cm,
+        bar/.append style={fill=bfhgrey!50},
+    ]{1}{16}
+        \gantttitle{2015}{14}
+        \gantttitle{2016}{2} \\
+        \gantttitlelist{1,...,16}{1} \\ % chktex 11
+        \ganttbar{Projektstart}{1}{1} \\
+        \ganttlinkedbar{Anforderungen}{2}{3} \ganttnewline{}
+        \ganttbar{Erarbeitung theoretische Grundlagen}{2}{12} \\
+        \ganttbar{Dokumentation}{1}{2} \ganttbar{}{1}{16} \\
+        \ganttbar{Präsentation/Verteidigung vorbereiten}{15}{16}
+    \end{ganttchart}
+    \caption{Zeitplan; Der Titel stellt Jahreszahlen, der Untertitel Semesterwochen dar}
+\end{figure}
+
+\subsubsection{Projektstart}
+\label{subsubsec:kick_off}
+In der ersten Phase wurden die Meilensteine der Arbeit identifiziert und skizziert. Um Details der Aufgabe zu verstehen, wurde das notwendige Vorwissen über globale Beleuchtungsalgorithmen erarbeitet. Weiter wurde das Grundgerüst dieser Dokumentation erstellt.
+
+\subsubsection{Anforderungen}
+\label{ssubsec:requirements}
+In dieser Phase wurde das Ziel dieser Projektarbeit festgelegt. Vom Ziel ausgehend wurden die dazu erforderlichen Projektphasen festgelegt.
+
+\subsubsection{Erarbeitung theoretische Grundlagen}
+\label{ssubsec:theoretical_background}
+\todo[inline]{Describe theoretical background}
+
+\subsubsection{Dokumentation}
+\label{ssubsec:documentation}
+
+Die vorliegende Arbeit entspricht der Dokumentation. Sie wurde während der gesamten Projektarbeit stetig erweitert und diente zur Reflexion von fertiggestellten Teilen.
 
 \section{Technologien}
 \label{sec:technologies}
@@ -26,5 +73,22 @@
 \subsection{Tools und Software}
 \label{subsec:tools_software}
 
+\noindent\emph{Dokumentation}
+\begin{description}
+    \item[\LaTeX] Eine Makro-Sammlung für das \TeX-System. Wurde zur Erstellung
+        dieser Dokumentation eingesetzt. Diese Dokumentation wurde mittels \LaTeX{} geschrieben.
+    \item[Make] Build-Automations-Werkzeug, wurde zur Erstellung dieses Dokumentes eingesetzt.
+    \item[zotero] Ein freies, quelloffenes Literaturverwaltungsprogramm zum Sammeln, Verwalten und Zitieren unterschiedlicher Online- und Offline-Quellen~\cite{wikipedia_foundation_zotero_2015}.
+\end{description}
+
+\noindent\emph{Arbeitsorganisation}
+\begin{description}
+    \item[Git] Freie Software zur verteilten Versionsverwaltung, wurde für die
+        Entwicklung dieser Dokumentation verwendet. Die Projektarbeit findet sich
+        unter~\href{https://www.github.com/sosterwalder/mte7101-project1}{GitHub}\footnote{\href{https://www.github.com/sosterwalder/mte7101-project1}{https://www.github.com/sosterwalder/mte7101-project1}}.
+    \item[GitHub] Eine freie Hosting-Platform für Git mit Weboberfläche.
+\end{description}
+
 \subsection{Standards und Richtlinien}
 \label{subsec:standards_guidelines}
+\todo[inline]{Describe standards \& guidelines}
