Provide an initial text describing ray tracing, introduce TODOs for the theoretical background chapter

--- a/doc/inc/50_theoretical_background.tex
+++ b/doc/inc/50_theoretical_background.tex
@@ -5,14 +5,25 @@
 \chapter{Theoretischer Hintergrund}
 \label{chap:theoretical_background}
 
+\todo[inline]{Provide introductio}
+
 \section{Ray Tracing}
 \label{sec:ray_tracing}
+
+Bei Ray Tracing handelt es sich um ein globales Beleuchtungsmodell, welches 1980 von Turner Whitted vorgestellt wurde.
+\todo[inline]{Describe ray tracing}
 
 \subsection{Ray Casting}
 \label{subsec:ray_casting}
 
+\todo[inline]{Describe ray casting}
+
 \section{Volume Ray Casting}
 \label{sec:volume_ray_casting}
 
+\todo[inline]{Describe volume ray casting}
+
 \subsection{Raymarching}
 \label{subsec:raymarching}
+
+\todo[inline]{Describe raymarching}
