Add bibliographic references for GPU gems 2, Wikipeda article about Zotero and Ray Tracing algorithm described by Turner Whitted

--- a/doc/inc/static/bibliography.bib
+++ b/doc/inc/static/bibliography.bib
@@ -1,13 +1,36 @@
-% BibTex Database
-% ===========================================================================
 
-% OK
-@misc{Aufgabenstellung,
-  title = {Aufgabenstellung Bachelorthesis},
-  author = {Prof. Dr. Jürgen Eckerle},
-  month = sep,
-  year = {2014},
-  HOWPUBLISHED = "Intranet",
-  note = "Abgerufen am 03. Januar 2015 ",
-  url = {https://intranet.bfh.ch/TI/de/Studium/Bachelor/Informatik/hochschuljahr20142015/BaThesisHS14/Seiten/default.aspx}	
+@book{pharr_gpu_2005,
+	series = {{GPU} {Gems}},
+	title = {{GPU} {Gems} 2: {Programming} {Techniques} {For} {High}-{Performance} {Graphics} {And} {General}-{Purpose} {Computation}},
+	isbn = {978-0-321-33559-3},
+	url = {https://books.google.ch/books?id=QuBkQgAACAAJ},
+	publisher = {Pearson Addison Wesley Prof},
+	author = {Pharr, M. and Fernando, R.},
+	year = {2005},
+	lccn = {2004030181}
+}
+
+@misc{wikipedia_foundation_zotero_2015,
+	title = {Zotero},
+	url = {https://de.wikipedia.org/wiki/Zotero},
+	author = {{Wikipedia Foundation}},
+	month = aug,
+	year = {2015},
+	note = {Published: Website
+Abgerufen am 27. September 2015}
+}
+
+@article{whitted_improved_1980,
+	title = {An {Improved} {Illumination} {Model} for {Shaded} {Display}},
+	volume = {23},
+	issn = {0001-0782},
+	url = {http://doi.acm.org/10.1145/358876.358882},
+	doi = {10.1145/358876.358882},
+	number = {6},
+	journal = {Commun. ACM},
+	author = {Whitted, Turner},
+	month = jun,
+	year = {1980},
+	keywords = {computer animation, computer graphics, raster displays, shading, visible surface algorithms},
+	pages = {343--349}
 }
