Added meeting minutes for coming up meeting, containing inputs from Mr. Fuhrer from today

--- a/doc/inc/static/attachment/10_meeting_minutes.tex
+++ b/doc/inc/static/attachment/10_meeting_minutes.tex
@@ -5,3 +5,5 @@
 \label{chap:10_meeting_minutes}
 
 \VerbatimInput[label=20150921]{inc/static/attachment/minutes/20150921}
+\newpage
+\VerbatimInput[label=20151005]{inc/static/attachment/minutes/20151005}
