--- a/doc/inc/50_theoretical_background.tex
+++ b/doc/inc/50_theoretical_background.tex
@@ -29,8 +29,7 @@ Dies ist dadurch bedingt, dass die traditionell verwendeten Algorithmen zur Bere
 
 Als Beispiel für ein lokales Beleuchtungsmodell dient das Phong-Beleuchtungsmodell, welches von Bui-Tong Phong entwickelt wurde:
 
-$ I = I_a + k_d \displaystyle\sum_{j=1}^{ls} (\overline{N} \cdot \overline{L_j}) + k_s \displaystyle\sum_{j=1}^{ls} (\overline{N} \cdot \overline{L_j^`} ) $
-% + k_s \displaystyle\sum_{j=1}^{js} (\overline{N} \cdot \overline{L}_j^2 )^n $
+$ I = I_a + k_d \displaystyle\sum_{j=1}^{ls} (\overrightarrow{N} \cdot \overrightarrow{L_j}) + k_s \displaystyle\sum_{j=1}^{ls} (\overrightarrow{N} \cdot \overrightarrow{L_j^`} ) $
 
 wobei gilt:
 
@@ -38,10 +37,10 @@ wobei gilt:
     \item $I =$ die reflektierte (Licht-) Intensität
     \item $I_a =$ Reflektion bedingt durch die Beleuchtung des Raumes
     \item $k_d =$ Konstante für die diffuse Komponente des reflektierten Lichtes
-    \item $\overline{N} =$ Einheitsnormale der Oberfläche
-    \item $\overline{L_j} =$ Vektor in Richtung der $j$-ten Lichtquelle
+    \item $\overrightarrow{N} =$ Einheitsnormale der Oberfläche
+    \item $\overrightarrow{L_j} =$ Vektor in Richtung der $j$-ten Lichtquelle
     \item $k_s =$ Koeffizient der spiegelenden Komponente
-    \item $\overline{L_j^`} =$ Vektor in der Hälfte zwischen dem Betrachter und der $j$-ten Lichtquelle
+    \item $\overrightarrow{L_j^`} =$ Vektor in der Hälfte zwischen dem Betrachter und der $j$-ten Lichtquelle
     \item $n =$ Exponent, welcher von der Reflektion der Oberfläche abhängt
     \item $ls = $ Anzahl Lichtquellen
 \end{itemize}
