Update TODO for guideline & standards

--- a/doc/inc/40_procedure.tex
+++ b/doc/inc/40_procedure.tex
@@ -91,4 +91,4 @@ Die vorliegende Arbeit entspricht der Dokumentation. Sie wurde während der gesa
 
 \subsection{Standards und Richtlinien}
 \label{subsec:standards_guidelines}
-\todo[inline]{Describe standards \& guidelines}
+\todo[inline]{Describe standards \& guidelines if needed}
