Provide two new bibliography entries
Computer graphics: Principles and practices 2nd and 3rd edition

--- a/doc/inc/static/bibliography.bib
+++ b/doc/inc/static/bibliography.bib
@@ -34,3 +34,25 @@ Abgerufen am 27. September 2015}
 	keywords = {computer animation, computer graphics, raster displays, shading, visible surface algorithms},
 	pages = {343--349}
 }
+
+@book{hughes_computer_2013,
+	series = {The systems programming series},
+	title = {Computer {Graphics}: {Principles} and {Practice}},
+	isbn = {978-0-321-39952-6},
+	url = {https://books.google.ch/books?id=OVpsAQAAQBAJ},
+	publisher = {Addison-Wesley},
+	author = {Hughes, J.F. and Van Dam, A. and Foley, J.D. and Feiner, S.K.},
+	year = {2013},
+	lccn = {2012045569}
+}
+
+@book{foley_computer_1996,
+	series = {Addison-{Wesley} systems programming series},
+	title = {Computer {Graphics}: {Principles} and {Practice}},
+	isbn = {978-0-201-84840-3},
+	url = {https://books.google.ch/books?id=-4ngT05gmAQC},
+	publisher = {Addison-Wesley},
+	author = {Foley, J.D.},
+	year = {1996},
+	lccn = {lc95013631}
+}
