--- a/doc/inc/static/bibliography.bib
+++ b/doc/inc/static/bibliography.bib
@@ -56,3 +56,17 @@ Abgerufen am 27. September 2015}
 	year = {1996},
 	lccn = {lc95013631}
 }
+
+@article{kajiya_rendering_1986,
+	title = {The {Rendering} {Equation}},
+	volume = {20},
+	issn = {0097-8930},
+	url = {http://doi.acm.org/10.1145/15886.15902},
+	doi = {10.1145/15886.15902},
+	number = {4},
+	journal = {SIGGRAPH Comput. Graph.},
+	author = {Kajiya, James T.},
+	month = aug,
+	year = {1986},
+	pages = {143--150}
+}
